[tool.poetry]
name = "multiclass-classification"
version = "0.1.0"
description = ""
authors = ["Nirav.Chokshi <chokshi.nirav26@gmail.com>"]
readme = "README.md"
packages = [{include = "multiclass_classification"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
